k8s/namespaces/default/redbot/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redbot
  namespace: default
  labels:
    app.kubernetes.io/name: redbot
    app.kubernetes.io/managed-by: flux
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: redbot
  template:
    metadata:
      labels:
        app.kubernetes.io/name: redbot
        app.kubernetes.io/managed-by: flux
    spec:
      runtimeClassName: youki
      automountServiceAccountToken: false
      containers:
        - name: redbot
          # renovate: datasource=docker depName=docker.io/phasecorex/red-discordbot
          image: docker.io/phasecorex/red-discordbot:core@sha256:93fa85fc803dbf5b3a144d7f6b5397fb049f4a8d911f4434006010b9c22b3c68
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
              ephemeral-storage: "1Gi"
            limits:
              cpu: "1"
              memory: "1Gi"
              ephemeral-storage: "5Gi"
          volumeMounts:
            - name: config
              mountPath: /data
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: redbot-config
