k8s/namespaces/default/redbot/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: redbot
  namespace: default
  labels:
    app.kubernetes.io/name: redbot
    app.kubernetes.io/managed-by: flux
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: redbot
      app.kubernetes.io/managed-by: flux
  policyTypes:
    - Ingress
    - Egress
  egress:
    - {}
